tests/valid/11_uint_basic.ml
int main() {
    uint a = 40;
    uint b = 2;
    uint c = a + b;

    assert(c == 42, "uint addition failed");

    return 0;
}
