tests/invalid/22_bit_mixed_int_uint.ml
int main() {
    int32 a = 6;
    uint b = 3;

    int32 x = a & b;

    return 0;
}
